<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/showQuestionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_question"/>
    
    <Button
        android:id="@+id/submitQuestionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_question"/>
    


<!--
    <Button
        android:id="@+id/searchQuestionsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_question"/>-->
    
    
    <Button
        android:id="@+id/takeAQuizButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take_a_quiz"/>
    
    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout_button"/>
    
    
    <TextView 
        android:id="@+id/karmaLevel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/empty_string"/>
    <TextView 
        android:id="@+id/karmaHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/empty_string"/>
    
</LinearLayout>
