<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
    
    <EditText
        android:id="@+id/editAnswer"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="8"
        android:hint="@string/type_answer" >
    </EditText>

    <Button
        android:id="@+id/editAnswerCorrectButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/incorrect" />

    <Button
        android:id="@+id/removeAnswerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/minus" />

</LinearLayout>