<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

	<EditText
        android:id="@+id/authGasparUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_gaspar_user" >
    </EditText>
    
	<EditText
        android:id="@+id/authGasparPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/hint_gaspar_password" >
    </EditText>
    
    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button" />

</LinearLayout>
