<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView 
        android:id="@+id/quizQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    
    <ListView
        android:id="@+id/quizAnswerList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

    
	<LinearLayout
	    android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
		<Button
			android:id="@+id/quizNextButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/next_question"/>
		<Button
			android:id="@+id/quizPreviousButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/previous_question"/>
		<Button
			android:id="@+id/handInQuizButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/hand_in_quiz"/>	    
	    
	    
	    
	</LinearLayout>
    


</LinearLayout>
